partitioner (0.16) unstable; urgency=low

  * Miguel Figueiredo
    - Added Portuguese translation (pt.po)
  * Ming Hua
    - Initial Simplified Chinese translation (zh_CN.po)
  * Bart Cornelis
    - Merged Norwegian Nynorsk (nn.po) translation from skolelinux-cvs
  * André Dahlqvist
    - Update Swedish translation (sv.po)
  * Anmar Oueja
    - created and translated to Arabic (ar.po)

 -- Joey Hess <joeyh@debian.org>  Thu,  1 Jan 2004 15:01:11 -0500

partitioner (0.15) unstable; urgency=low

  * Bart Cornelis
    - Merged Norwegian Bokmael (nb.po) from skolelinux-cvs
  * Teófilo Ruiz Suárez
    - Updated Spanish translations (po/es.po)
  * Peter Mann
    - Updated Slovak translation
  * Giuseppe Sacco
    - Added italian translation (it.po)
  * Thiemo Seufer
    - Fix memory leaks.

 -- Joey Hess <joeyh@debian.org>  Thu, 25 Dec 2003 19:58:59 -0500

partitioner (0.14) unstable; urgency=low

  * Bartosz Fenski
    - Updated Polish (pl) translation.
  * Verok Istvan
    - Initial Hungarian translation
  * André Dahlqvist
    - Update Swedish translation. (sv.po)
  * David Martínez Moreno
    - Updated Spanish translation (es.po) and converted to UTF-8.
  * Konstantinos Margaritis
    - Updated Greek translation (el.po)
  * Thiemo Seufer
    - Change CFLAGS to -W -Wall -Os.
  * Alwin Meschede
    - Updated German translation (de.po)
  * Bart Cornelis
    - Updated Dutch translation (nl.po)
    - incorporated debian-l10n-dutch review comments into nl.po
  * Steinar H. Gunderson
    - Updated Norwegian Bokmål translation (nb.po).
  * Otavio Salvador
    - Change priority of question about disc to 'critical'.
      Closes: #220258
    - Fix a trivial spell error in pt_BR translation.
    - Fixed to not call the partitioner tool without a disk select.
  * Thiemo Seufer
    - Use always fdisk for mips.
    - Remove main.h, fix broken function prototypes and static variable
      definition in the header file by that.
    - Simplify extract_choice().