@@ -10,6 +10,9 @@ partitioner (0.16) unstable; urgency=low
     - Update Swedish translation (sv.po)
   * Anmar Oueja
     - created and translated to Arabic (ar.po)
+  * Christian Perrier
+    - main.c: set LANGUAGE variable before calling fdisk programs
+              this may cause problems with terminals
 
  -- Joey Hess <joeyh@debian.org>  Thu,  1 Jan 2004 15:01:11 -0500
 
